--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,12 +14,11 @@ License: CC0
 Encoding: UTF-8
 LazyData: true
 Imports:
-    dplyr,
-    pdftools, 
+    magrittr,
     tools
 Depends:
     R (>= 3.2.0)
 Authors@R: person(given = "Marcus W.", family = "Beck",
     role = c("aut","cre"),
     email = "mbafs2012@gmail.com")
-RoxygenNote: 6.0.1
+RoxygenNote: 7.3.1
